ENH: Initialisation of the external modules
- Initialisation of the other python modules if that's not already done
- Creation of dictionary with all the external widhets (python and CLI)

--- a/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
+++ b/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
@@ -21,7 +21,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="loadCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="SceneCollapsibleButton">
      <property name="text">
       <string>Scene</string>
      </property>
