--- a/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
+++ b/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>499</width>
-    <height>702</height>
+    <height>775</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,6 +24,9 @@
     <widget class="ctkCollapsibleButton" name="SceneCollapsibleButton">
      <property name="text">
       <string>Scene</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
      </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -47,18 +50,79 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="CollapsibleButton">
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="title">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <property name="bottomMargin">
+       <number>12</number>
+      </property>
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="Model1RadioButton">
+        <property name="layoutDirection">
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="text">
+         <string>Model 1 (Fixed) </string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QRadioButton" name="Model2RadioButton">
+        <property name="text">
+         <string>Model 2 (Moving)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="PreviousStepPushButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Previous Step</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="NextStepPushButton">
+        <property name="text">
+         <string>Next Step</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="ctkCollapsibleButton" name="DataSelectionCollapsibleButton">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
      <property name="text">
       <string>Data Selection</string>
      </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
      <property name="checked">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -70,9 +134,12 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
-         <widget class="QRadioButton" name="radioButton">
+         <widget class="QRadioButton" name="SingleModelRadioButton">
+          <property name="layoutDirection">
+           <enum>Qt::RightToLeft</enum>
+          </property>
           <property name="text">
-           <string>Measures on a single model</string>
+           <string>Measures on a single model </string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -80,7 +147,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_2">
+         <widget class="QRadioButton" name="TwoModelsRadioButton">
           <property name="text">
            <string>Measures between two models</string>
           </property>
@@ -89,7 +156,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QGroupBox" name="groupBox">
+       <widget class="QGroupBox" name="Model1groupBox">
         <property name="toolTip">
          <string>In the case of the usage of surface registration, this model is considered as the fixed model.</string>
         </property>
@@ -108,22 +175,56 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBox_2">
+          <widget class="qMRMLNodeComboBox" name="Model1MRMLNodeComboBox">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="toolTip">
             <string>In the case of the usage of surface registration, this model is considered as the fixed model.</string>
            </property>
+           <property name="nodeTypes">
+            <stringlist>
+             <string>vtkMRMLModelNode</string>
+            </stringlist>
+           </property>
+           <property name="noneEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="addEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="removeEnabled">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBox">
+          <widget class="qMRMLNodeComboBox" name="FidList1MRMLNodeComboBox">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="toolTip">
             <string>In the case of the usage of surface registration, this landmarks list is considered as the fixed landmarks list.</string>
+           </property>
+           <property name="nodeTypes">
+            <stringlist>
+             <string>vtkMRMLMarkupsFiducialNode</string>
+            </stringlist>
+           </property>
+           <property name="noneEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="addEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="removeEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="editEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="renameEnabled">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -141,7 +242,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="groupBox_2">
+       <widget class="QGroupBox" name="Model2groupBox">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -150,22 +251,56 @@
         </property>
         <layout class="QFormLayout" name="formLayout_2">
          <item row="0" column="1">
-          <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBox_4">
+          <widget class="qMRMLNodeComboBox" name="Model2MRMLNodeComboBox">
            <property name="enabled">
             <bool>false</bool>
            </property>
            <property name="toolTip">
             <string>In the case of the usage of surface registration, this model is considered as the moving model.</string>
            </property>
+           <property name="nodeTypes">
+            <stringlist>
+             <string>vtkMRMLModelNode</string>
+            </stringlist>
+           </property>
+           <property name="noneEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="addEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="removeEnabled">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBox_3">
+          <widget class="qMRMLNodeComboBox" name="FidList2MRMLNodeComboBox">
            <property name="enabled">
             <bool>false</bool>
            </property>
            <property name="toolTip">
             <string>In the case of the usage of surface registration, this landmarks list is considered as the moving landmarks list.</string>
+           </property>
+           <property name="nodeTypes">
+            <stringlist>
+             <string>vtkMRMLMarkupsFiducialNode</string>
+            </stringlist>
+           </property>
+           <property name="noneEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="addEnabled">
+            <bool>true</bool>
+           </property>
+           <property name="removeEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="editEnabled">
+            <bool>false</bool>
+           </property>
+           <property name="renameEnabled">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -192,29 +327,6 @@
         </layout>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>Next Step</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Be fully guided</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
    </item>
@@ -223,10 +335,13 @@
      <property name="text">
       <string>Preprocessing</string>
      </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
-     <layout class="QVBoxLayout" name="PreprocessingLayout">
+     <layout class="QVBoxLayout" name="PreprocessingLayout1">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
@@ -258,22 +373,12 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_5">
-        <item>
-         <widget class="QPushButton" name="pushButton_3">
-          <property name="text">
-           <string>Previus Step</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_2">
-          <property name="text">
-           <string>Next Step</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string/>
+        </property>
+        <layout class="QVBoxLayout" name="PreprocessingLayout"/>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -283,10 +388,13 @@
      <property name="text">
       <string>Quantification</string>
      </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
-     <layout class="QVBoxLayout" name="QuantificationLayout">
+     <layout class="QVBoxLayout" name="QuantificationLayout1">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
@@ -323,22 +431,12 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
-        <item>
-         <widget class="QPushButton" name="pushButton_4">
-          <property name="text">
-           <string>Previus Step</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_5">
-          <property name="text">
-           <string>Next Step</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="title">
+         <string/>
+        </property>
+        <layout class="QVBoxLayout" name="QuantificationLayout"/>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -348,10 +446,13 @@
      <property name="text">
       <string>Analysis</string>
      </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
-     <layout class="QVBoxLayout" name="AnalysisLayout">
+     <layout class="QVBoxLayout" name="AnalysisLayout1">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
@@ -388,22 +489,12 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <item>
-         <widget class="QPushButton" name="pushButton_6">
-          <property name="text">
-           <string>Previus Step</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_7">
-          <property name="text">
-           <string>Next Step</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QGroupBox" name="groupBox_3">
+        <property name="title">
+         <string/>
+        </property>
+        <layout class="QVBoxLayout" name="AnalysisLayout"/>
+       </widget>
       </item>
      </layout>
     </widget>
