ENH: Improvement of the functionement of SurfaceRegistration
-  The user don't have the possibility to use SurfaceRegistration when he is working on one single model
-  The curent model in SurfaceRegistration is selected by the curent model in Longitudinal Quantification (model1/model2)

--- a/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
+++ b/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="qMRMLWidget" name="Form">
+ <class>LongitudinalQuantification</class>
+ <widget class="qMRMLWidget" name="LongitudinalQuantification">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -377,11 +377,6 @@
           <item>
            <property name="text">
             <string>Easy Clip</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Surface Registration</string>
            </property>
           </item>
          </widget>
