ENH: Connection of the "Compute around Bounding Box" button

--- a/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
+++ b/LongitudinalQuantification/Resources/UI/LongitudinalQuantification.ui
@@ -40,71 +40,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="computeBox">
+       <widget class="QPushButton" name="computeBoxPushButton">
         <property name="text">
          <string>Compute around bounding box</string>
         </property>
        </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox_4">
-     <property name="title">
-      <string/>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <property name="bottomMargin">
-       <number>12</number>
-      </property>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="PreviousStepPushButton">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>Previous Step</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <layout class="QVBoxLayout" name="verticalLayout_4">
-        <item>
-         <widget class="QRadioButton" name="Model2RadioButton">
-          <property name="text">
-           <string>Model 2 (Moving)</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="NextStepPushButton">
-        <property name="text">
-         <string>Next Step</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <layout class="QVBoxLayout" name="verticalLayout_5">
-        <item>
-         <widget class="QRadioButton" name="Model1RadioButton">
-          <property name="layoutDirection">
-           <enum>Qt::LeftToRight</enum>
-          </property>
-          <property name="text">
-           <string>Model 1 (Fixed) </string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </widget>
@@ -342,6 +282,73 @@
          </item>
         </layout>
        </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="fullyGuidedPushButton">
+        <property name="text">
+         <string>Be Fully Guided</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="stepGroupBox">
+     <property name="title">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <property name="bottomMargin">
+       <number>12</number>
+      </property>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="PreviousStepPushButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Previous Step</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QRadioButton" name="Model2RadioButton">
+          <property name="text">
+           <string>Model 2 (Moving)</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="NextStepPushButton">
+        <property name="text">
+         <string>Next Step</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <widget class="QRadioButton" name="Model1RadioButton">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="text">
+           <string>Model 1 (Fixed) </string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
